Add Vault Client viewer
